<resources>
    <string name="app_name">TripTip</string>

    <string name="tab_wish_list">TRAVEL WISH LIST</string>
    <string name="tab_countries">COUNTRIES</string>
    <string name="tab_map">MAP</string>
    <string name="tip">Tip</string>
    <string name="notification_message">"This month is a great time to travel to %1$s, have a look.."</string>
    <string name="atc_tvcn">Germany</string>
    <string name="atc_tv_overview">Overview</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_travel_country">TravelCountryActivity</string>
    <string name="area_size_proportion">%1$s km\u00B2</string>
    <string name="calling_code">+%1$s</string>
    <string name="country_codes">%1$s, %2$s</string>
    <string name="added_to_travel_list">Congrats! You just added %1$s to your travel list.</string>
    <string name="already_added_to_travel_list">You already plan to visit %1$s</string>
    <string name="menu_travel_map_search">Search</string>
    <string name="atc_tv_when_to_travel">When to travel</string>
    <string name="co_tv_native_name">Native Name:&#160;&#160;</string>
    <string name="co_tv_native_name_value">Deutschland</string>
    <string name="co_tv_capital_city">Capital City:&#160;&#160;</string>
    <string name="co_tv_capital_city_name">Berlin</string>
    <string name="co_tv_language">Language:&#160;&#160;</string>
    <string name="co_tv_language_name">German</string>
    <string name="co_tv_native_language">Native Language Name:&#160;&#160;</string>
    <string name="co_tv_native_language_name">Deutsch</string>
    <string name="co_tv_region">Region:&#160;&#160;</string>
    <string name="co_tv_region_name">Europe</string>
    <string name="co_tv_area">Area:&#160;&#160;</string>
    <string name="co_tv_area_size">357,386 km\u00B2</string>
    <string name="co_tv_population">Population:&#160;&#160;</string>
    <string name="co_tv_population_size">83,000,000</string>
    <string name="co_tv_currency">Currency:&#160;&#160;</string>
    <string name="co_tv_currency_value">Euro (€) (EUR)</string>
    <string name="co_tv_time_zone">Time zone:&#160;&#160;</string>
    <string name="co_tv_time_zone_value">UTC+1</string>
    <string name="co_tv_calling_code">Calling code:&#160;&#160;</string>
    <string name="co_tv_calling_code_value">+49</string>
    <string name="co_tv_country_code">Country code:&#160;&#160;</string>
    <string name="co_tv_country_code_values">DE</string>
    <string name="ftl_empty_list">Not yet decided where to go :(</string>

</resources>
