<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/background"
        tools:context=".main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/tv_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/anchor_dropdown"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTravelList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_wish_list"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCountries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_countries" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_map" />

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpTravelContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
        android:id="@+id/pbTravel"
        android:layout_width="@dimen/at_pb_size"
        android:layout_height="@dimen/at_pb_size"
        android:visibility="gone"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>